--- a/obrigado.html
+++ b/obrigado.html
@@ -13,7 +13,7 @@
     <img class="img" src="./fundo.png" alt="">
     <div class="text">
         <h1>Obrigado pela sua presença</h1>
-        <a href="./formulario.html"><button>Voltar</button></a>
+        <a href="./index.html"><button>Voltar</button></a>
     </div>
 </body>
 
