--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <br><br><br>
                 <input type="submit" name="submit" id="submit">
-                <input type="hidden" name="_next" value="https://obrigado-neon-two.vercel.app/">
+                <input type="hidden" name="_next" value="./obrigado.html">
             </fieldset>
         </form>
     </div>
