--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             <img class="card-1" src="./avante.png" alt="">
             <img class="card-2" src="./ivasko.png" alt="">
         </div>
-        <form action="https://formsubmit.co/rennanmktmacarini@gmail.com" method="post">
+        <form action="https://formsubmit.co/rennanmktmacarini@gmail.com" method="POST">
             <fieldset>
                 <legend><b>CONFIRME SUA PRESENÇA</b></legend>
+                <a href="./obrigado.html">link</a>
                 <br><br><br>
                 <div class="inputBox">
                     <input type="text" name="nome" id="nome" class="inputUser" required>
@@ -46,7 +47,7 @@
                 </div>
                 <br><br><br>
                 <input type="submit" name="submit" id="submit">
-                <input type="hidden" name="_next" value="./obrigado.html">
+                <input type="hidden" name="_next" value="">
             </fieldset>
         </form>
     </div>
