--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <form action="https://formsubmit.co/rennanmktmacarini@gmail.com" method="POST">
             <fieldset>
                 <legend><b>CONFIRME SUA PRESENÇA</b></legend>
-                <a href="./obrigado.html">link</a>
                 <br><br><br>
                 <div class="inputBox">
                     <input type="text" name="nome" id="nome" class="inputUser" required>
@@ -47,7 +46,7 @@
                 </div>
                 <br><br><br>
                 <input type="submit" name="submit" id="submit">
-                <input type="hidden" name="_next" value="">
+                <input type="hidden" name="_next" value="https://formulario-six-iota.vercel.app/obrigado.html">
             </fieldset>
         </form>
     </div>
