--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
                 <br><br><br>
                 <div class="inputBox">
                     <input type="text" name="nome" id="nome" class="inputUser" required>
-                    <label for="nome" class="labelInput">NOME COMPLETO</label>
+                    <label for="nome" class="labelInput"><b>NOME COMPLETO</b></label>
                 </div>
                  <br><br><br>
                 <div class="inputBox">
                     <input type="text" name="email" id="email" class="inputUser" required>
-                    <label for="email" class="labelInput">EMAIL</label>
+                    <label for="email" class="labelInput"><b>EMAIL</b></label>
                 </div>
                 <br><br><br>
                 <div class="inputBox">
-                    <input type="text" name="telefone" id="telefone" class="inputUser" required>
-                    <label for="email" class="labelInput">TELEFONE</label>
+                    <input type="tel" name="telefone" id="telefone" class="inputUser" placeholder="(DD)" maxlength="13" required>
+                    <label for="telefone" class="labelInput"><b>TELEFONE</b></label>
                 </div>
                 <br><br><br>
                 <div class="inputBox">
-                    <input type="text" name="cidade" id="cidade" class="inputUser" required>
-                    <label for="industria" class="labelInput"><b>INDUSTRIA</b></label>
+                    <input type="text" name="industria" id="industria" class="inputUser" required>
+                    <label for="industria" class="labelInput"><b>INDÚSTRIA</b></label>
                 </div>
                 <br><br><br>
                 <div class="inputBox">
-                    <input type="text" name="estado" id="estado" class="inputUser" required>
+                    <input type="text" name="cargo" id="cargo" class="inputUser" required>
                     <label for="cargo" class="labelInput"><b>CARGO</b></label>
                 </div>
                 <br><br><br>
@@ -51,7 +51,7 @@
         </form>
     </div>
 
-
+    <script src="./script.js"></script>
 </body>
 
 </html>
