--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <br><br><br>
                 <div class="inputBox">
-                    <input type="tel" name="telefone" id="telefone" class="inputUser" placeholder="(DD)" maxlength="13" required>
+                    <input type="tel" name="telefone" id="telefone" class="inputUser" placeholder="(DDD)" maxlength="13" required>
                     <label for="telefone" class="labelInput"><b>TELEFONE</b></label>
                 </div>
                 <br><br><br>
