--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class="card-1" src="./avante.png" alt="">
             <img class="card-2" src="./ivasko.png" alt="">
         </div>
-        <form action="https://formsubmit.co/rennanmktmacarini@gmail.com" method="POST">
+        <form action="https://formsubmit.co/avanteivasko@gmail.com" method="POST">
             <fieldset>
                 <legend><b>CONFIRME SUA PRESENÇA</b></legend>
                 <br><br><br>
