--- a/obrigado.html
+++ b/obrigado.html
@@ -12,8 +12,8 @@
 
     <img class="img" src="./fundo.png" alt="">
     <div class="text">
-        <h1>Obrigado pela sua presença</h1>
-        <a href="./index.html"><button>Voltar</button></a>
+        <h1><b>Obrigado pela sua presença</b></h1>
+        <a href="./index.html"><button><b>Voltar</b></button></a>
     </div>
 </body>
 
