--- a/index.html
+++ b/index.html
@@ -19,37 +19,47 @@
         <form action="https://formsubmit.co/avanteivasko@gmail.com" method="POST">
             <fieldset>
                 <legend><b>CONFIRME SUA PRESENÇA</b></legend>
-                <br><br><br>
                 <div class="inputBox">
                     <input type="text" name="nome" id="nome" class="inputUser" required>
                     <label for="nome" class="labelInput"><b>NOME COMPLETO</b></label>
                 </div>
-                 <br><br><br>
                 <div class="inputBox">
                     <input type="text" name="email" id="email" class="inputUser" required>
                     <label for="email" class="labelInput"><b>EMAIL</b></label>
                 </div>
-                <br><br><br>
                 <div class="inputBox">
-                    <input type="tel" name="telefone" id="telefone" class="inputUser" placeholder="(DDD)" maxlength="13" required>
+                    <input type="tel" name="telefone" id="telefone" class="inputUser" placeholder="(DDD)" maxlength="13"
+                        required>
                     <label for="telefone" class="labelInput"><b>TELEFONE</b></label>
                 </div>
-                <br><br><br>
                 <div class="inputBox">
                     <input type="text" name="industria" id="industria" class="inputUser" required>
                     <label for="industria" class="labelInput"><b>INDÚSTRIA</b></label>
                 </div>
-                <br><br><br>
                 <div class="inputBox">
                     <input type="text" name="cargo" id="cargo" class="inputUser" required>
                     <label for="cargo" class="labelInput"><b>CARGO</b></label>
                 </div>
-                <br><br><br>
                 <input type="submit" name="submit" id="submit">
                 <input type="hidden" name="_next" value="https://formulario-six-iota.vercel.app/obrigado.html">
             </fieldset>
         </form>
+        <div class="logo">
+            <div class="card-logo">
+                <img class="card-img" src="./img/caminhao.png" alt="">
+                <img src="./img/eci.png" alt="">
+                <img src="./img/ivaskotech.png" alt="">
+                <img src="./img/mariano.png" alt="">
+                <img class="card-img" src="./img/rotta400.png" alt="">
+                <img src="./img/supermercado.png" alt="">
+                <img src="./img/levegas.png" alt="">
+            </div>
+        </div>
     </div>
+
+   
+
+
 
     <script src="./script.js"></script>
 </body>
