--- a/index.html
+++ b/index.html
@@ -46,13 +46,16 @@
         </form>
         <div class="logo">
             <div class="card-logo">
-                <img class="card-img" src="./img/caminhao.png" alt="">
-                <img src="./img/eci.png" alt="">
-                <img src="./img/ivaskotech.png" alt="">
+                <img src="./img/supermercado.png" alt="">
+                <img src="./img/new.png" alt="">
                 <img src="./img/mariano.png" alt="">
                 <img class="card-img" src="./img/rotta400.png" alt="">
-                <img src="./img/supermercado.png" alt="">
                 <img src="./img/levegas.png" alt="">
+                <img src="./img/arolha.png" alt="">
+                <img src="./img/ivaskotech.png" alt="">
+                <img class="card-img" src="./img/caminhao.png" alt="">
+                <img src="./img/eci.png" alt="">
+                <img src="./img/exata.png" alt="">
             </div>
         </div>
     </div>
