--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <input type="text" name="cargo" id="cargo" class="inputUser" required>
                     <label for="cargo" class="labelInput"><b>CARGO</b></label>
                 </div>
-                <input type="submit" name="submit" id="submit">
+                <input type="submit" name="submit" value="CONFIRMAR PRESENÇA" id="submit">
                 <input type="hidden" name="_next" value="https://formulario-six-iota.vercel.app/obrigado.html">
             </fieldset>
         </form>
