--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img src="./img/supermercado.png" alt="">
                 <img src="./img/new.png" alt="">
                 <img src="./img/mariano.png" alt="">
-                <img class="card-img" src="./img/rotta400.png" alt="">
+                <img class="card-img" src="./img/rotta.png" alt="">
                 <img src="./img/levegas.png" alt="">
                 <img src="./img/arolha.png" alt="">
                 <img src="./img/ivaskotech.png" alt="">
