--- a/obrigado.html
+++ b/obrigado.html
@@ -12,7 +12,7 @@
 
     <img class="img" src="./fundo.png" alt="">
     <div class="text">
-        <h1><b>Obrigado pela sua presença</b></h1>
+        <h1><b>Inscrição Confirmada</b></h1>
         <a href="./index.html"><button><b>Voltar</b></button></a>
     </div>
 </body>
