--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <img class="img" src="./fundo.png" alt="">
     <div class="box">
         <div class="cards">
             <img class="card-1" src="./avante.png" alt="">
             <img class="card-2" src="./ivasko.png" alt="">
         </div>
+        <!-- 
         <form action="https://formsubmit.co/avanteivasko@gmail.com" method="POST">
             <fieldset>
                 <legend><b>CONFIRME SUA PRESENÇA</b></legend>
@@ -44,6 +44,8 @@
                 <input type="hidden" name="_next" value="https://formulario-six-iota.vercel.app/obrigado.html">
             </fieldset>
         </form>
+        -->
+        <h1>Inscrição encerrada</h1>
         <div class="logo">
             <div class="card-logo">
                 <img src="./img/supermercado.png" alt="">
@@ -51,6 +53,8 @@
                 <img src="./img/mariano.png" alt="">
                 <img class="card-img" src="./img/rotta.png" alt="">
                 <img src="./img/levegas.png" alt="">
+
+                
                 <img src="./img/arolha.png" alt="">
                 <img src="./img/ivaskotech.png" alt="">
                 <img class="card-img" src="./img/caminhao.png" alt="">
